istio/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: main-gateway
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: main-vs
spec:
  hosts:
  - "enuygun.yusuf-erdem.com"
  gateways:
  - main-gateway
  http:
  - match:
    - uri:
        prefix: "/grafana/"
    route:
    - destination:
        host: kube-prometheus-stack-grafana.monitoring.svc.cluster.local
        port:
          number: 80
    headers:
      request:
        set:
          x-forwarded-proto: "http"
          x-forwarded-for: ""
  - match:
    - uri:
        exact: "/grafana"
    redirect:
      uri: "/grafana/"
  - match:
    - uri:
        prefix: "/prometheus/"
    route:
    - destination:
        host: kube-prometheus-stack-prometheus.monitoring.svc.cluster.local
        port:
          number: 9090
  - match:
    - uri:
        exact: "/prometheus"
    redirect:
      uri: "/prometheus/"
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: service-2048
        port:
          number: 80
